added styling for home page and cart

--- a/public/cart.html
+++ b/public/cart.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="./cart.css">
     <title>TNTBM Cart</title>
 </head>
 <body>
-    
+    <header>
+        <div id="logo-title">
+            <img id="logo" src="./images/logo.png"/>
+            <h1>
+                <a id="title-link" href="./home.html">
+                    Totally Not The Black Market
+                </a>
+            </h1>
+        </div>
+        <a href="./cart.html" id="to-cart"></a>
+    </header>
 </body>
 </html>
