started working on cart page

--- a/public/cart.html
+++ b/public/cart.html
@@ -26,5 +26,25 @@
         </div>
         <a href="./cart.html" id="to-cart"></a>
     </header>
+
+    <section id="full-cart">
+        <section id="cart-items"></section>
+        <section id="order-form">
+            <h1>Cart Total</h1>
+            <p id="order-total"></p>
+            <p id="order-tax"></p>
+
+            <h2>Shipping Options</h2>
+            <p>Economy: FREE</p>
+            <p>One Day: $9.99</p>
+
+            <button>Finish Order</button>
+
+        </section>
+    </section>
+
+
+    <script src="../node_modules/axios/dist/axios.min.js"></script>
+    <script src="./cart.js"></script>
 </body>
 </html>
