--- a/public/cart.html
+++ b/public/cart.html
@@ -30,15 +30,20 @@
     <section id="full-cart">
         <section id="cart-items"></section>
         <section id="order-form">
-            <h1>Cart Total</h1>
-            <p id="order-total"></p>
-            <p id="order-tax"></p>
 
-            <h2>Shipping Options</h2>
-            <p>Economy: FREE</p>
-            <p>One Day: $9.99</p>
+            <div id="totals">
+                <h1 id="cart-total">Cart Total</h1>
+                <p class="inter" id="order-total"></p>
+                <p id="order-tax"></p>
+            </div>
 
-            <button>Finish Order</button>
+            <div id="ship-info">
+                <h2 id="ship-title">Shipping Options</h2>
+                <p id="ship-1">Economy: FREE</p>
+                <p id="ship-2">One Day: <span class="inter">9.99</span></p>
+            </div>
+
+            <button id="finish">Finish Order</button>
 
         </section>
     </section>
