--- a/public/home.html
+++ b/public/home.html
@@ -18,11 +18,9 @@
     <header>
         <div id="logo-title">
             <img id="logo" src="./images/logo.png"/>
-            <h1>
-                <a id="title-link" href="./home.html">
-                    Totally Not The Black Market
-                </a>
-            </h1>
+            <a id="title-link" href="./home.html">
+                Totally <span id="not">Not</span> The Black Market
+            </a>
         </div>
         <a href="./cart.html" id="to-cart"></a>
     </header>
